<?xml version="1.0"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:background="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/academic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/mainText2"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:singleLine="false"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:background="@android:color/holo_blue_dark" />

    <EditText
        android:id="@+id/inputNumber"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/actionText"
        android:background="@drawable/apptheme_edit_text_holo_dark"
        android:textAlignment="center"
        android:ems="10">

        <requestFocus/>

    </EditText>


    <RadioGroup
        android:id="@+id/numberOptions"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">

        <RadioButton
            android:id="@+id/bTOh"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:button="@drawable/apptheme_btn_radio_holo_dark"
            android:text="@string/radioButton5"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/hTOb"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:button="@drawable/apptheme_btn_radio_holo_dark"
            android:text="@string/radioButton6"
            android:checked="false"/>

    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>

    <Button
        android:id="@+id/convertBH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textStyle="bold"
        android:text="@string/convert"
        android:textColor="@android:color/white"
        android:background="@drawable/apptheme_btn_default_holo_dark"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAlignment="center"
        android:hint="@string/resultText"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_dark"/>

</LinearLayout>